--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,18 @@
+buildscript {
+    repositories {
+        google()
+        maven { url 'https://maven.google.com' }
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.google.gms:google-services:3.3.1'
+        classpath 'com.google.firebase:firebase-plugins:1.1.5'
+    }
+}
+
+
 apply plugin: 'com.android.application'
 
 android {
